# awesome-system-calls

./: .cirrus.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.md.j2  UNKNOWN-DARWIN.md  UNKNOWN-FREEBSD.md  UNKNOWN-LINUX.md  UNKNOWN-OPENBSD.md  UNKNOWN.md.j2  categorization.yml
.github/: CODEOWNERS
.github/workflows/: update.yml
src/: main.rs
src/categorization/: category.rs  mod.rs  syscall.rs
src/os/: darwin.rs  freebsd.rs  linux.rs  mod.rs  openbsd.rs
