[package]
name = "awesome-system-calls"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = "3"
cmacros = "0"
minijinja = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0"
indexmap = { version = "2", features = ["serde"] }
Inflector = "0"
regex = "1.12.3"
clap = { version = "4", features = ["derive"] }
github-slugger = "0.1.0"
serde_json = "1"
